Changed sbt configuration to compile against Scala 2.8.0-SNAPSHOT

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,12 @@
-#Project properties
-#Tue Jun 23 12:23:28 IST 2009
+# Standard properties
 project.organization=empty
-project.name=Scala Query
-sbt.version=0.4.6
-project.version=1.0
-scala.version=2.7.4
+project.name=ScalaQuery
+sbt.version=0.5.1
+project.version=1.0-SNAPSHOT
+scala.version=2.7.5
 project.initialize=false
+
+# Custom properties
+do.fork = true
+forked.compiler.jar = C:/StandaloneApps/sbt/scala-compiler-2.8.0-SNAPSHOT.jar
+forked.library.jar  = C:/StandaloneApps/sbt/scala-library-2.8.0-SNAPSHOT.jar
