Changes for Scala 2.4.5 compatibility

--- a/project/build.properties
+++ b/project/build.properties
@@ -7,6 +7,6 @@ scala.version=2.7.5
 project.initialize=false
 
 # Custom properties
-do.fork = true
+do.fork = false
 forked.compiler.jar = C:/StandaloneApps/sbt/scala-compiler-2.8.0-SNAPSHOT.jar
 forked.library.jar  = C:/StandaloneApps/sbt/scala-library-2.8.0-SNAPSHOT.jar
