Updated sbt config for building natively with a local sbt build against Scala nightly builds (see http://code.google.com/p/simple-build-tool/wiki/LocalScala for setting sbt up for this)

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,12 +1,12 @@
 # Standard properties
-project.organization=empty
-project.name=ScalaQuery
-sbt.version=0.5.4
-project.version=1.0-SNAPSHOT
-scala.version=2.7.5
+project.organization=com.novocode
+project.name=scala-query
+project.version=0.1.0-SNAPSHOT
+sbt.version=0.5.6-SNAPSHOT
+scala.version=2.8.0-20091004.003722-+
 project.initialize=false
 
 # Custom properties
-do.fork = true
-forked.compiler.jar = C:/StandaloneApps/sbt/scala-compiler-2.8.0-SNAPSHOT.jar
-forked.library.jar  = C:/StandaloneApps/sbt/scala-library-2.8.0-SNAPSHOT.jar
+do.fork = false
+forked.compiler.jar = C:/StandaloneApps/sbt/scala-compiler-2.8.0-20091001.004409-228.jar
+forked.library.jar  = C:/StandaloneApps/sbt/scala-library-2.8.0-20091001.004409-229.jar
