--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 project.organization=com.novocode
 project.name=scala-query
 project.version=1.0.0-SNAPSHOT
-sbt.version=0.5.6-SNAPSHOT
-scala.version=2.8.0-20091006.003811-+
+sbt.version=0.5.7-p1
+scala.version=2.8.0.Beta1-RC1
 project.initialize=false
 
 # Custom properties
