Updated build system to xsbt 0.6.7

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,12 +1,9 @@
-# Standard properties
+#
+#Fri Dec 11 19:26:44 CET 2009
 project.organization=com.novocode
 project.name=scala-query
 project.version=1.0.0-SNAPSHOT
-sbt.version=0.5.7-p1
-scala.version=2.8.0.Beta1-RC1
+sbt.version=0.6.7
+def.scala.version=2.7.7
+build.scala.versions=2.8.0.Beta1-RC2
 project.initialize=false
-
-# Custom properties
-do.fork = false
-forked.compiler.jar = C:/StandaloneApps/sbt/scala-compiler-2.8.0-20091001.004409-228.jar
-forked.library.jar  = C:/StandaloneApps/sbt/scala-library-2.8.0-20091001.004409-229.jar
