--- a/project/build.properties
+++ b/project/build.properties
@@ -1,9 +1,9 @@
 #
-#Fri Dec 11 19:26:44 CET 2009
+#Sat Jul 03 16:21:48 CEST 2010
 project.organization=com.novocode
 project.name=scala-query
+sbt.version=0.7.4
 project.version=1.0.0-SNAPSHOT
-sbt.version=0.6.8
 def.scala.version=2.7.7
-build.scala.versions=2.8.0.Beta1-RC4
+build.scala.versions=2.8.0.RC7
 project.initialize=false
