--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="src" path="src/test/scala"/>
-	<classpathentry kind="con" path="ch.epfl.lamp.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/h2-1.1.119.jar"/>
-	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/compile/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/h2-1.2.140.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/nestedvm-1.0.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/sqlite-jdbc-3.6.16.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="lib_managed/scala_2.8.0/test/sqlite-jdbc-3.6.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
