Better support for MySQL; Unit tests now running against MySQL; Support for sequences is still missing

--- a/test-dbs/databases.properties
+++ b/test-dbs/databases.properties
@@ -2,12 +2,28 @@
 
 # PostgreSQL quick setup:
 # - Install PostgreSQL server with default options
-# - Change password in postgres.url
+# - Change password in postgres.password
 # - Set postgres.enabled = true
 postgres.enabled = false
-postgres.url = jdbc:postgresql:[DB]?user=[USER]&password=secret
+postgres.url = jdbc:postgresql:[DB]
 postgres.user = postgres
+postgres.password = secret
 postgres.adminDB = postgres
 postgres.testDB = scala-query-test
 postgres.create = CREATE DATABASE "[DB]"
 postgres.drop = DROP DATABASE IF EXISTS "[DB]"
+postgres.driver = org.postgresql.Driver
+
+# MySQL quick setup:
+# - Install MySQL Essentials with default options
+# - Change password in mysql.password
+# - Set mysql.enabled = true
+mysql.enabled = false
+mysql.url = jdbc:mysql://localhost/[DB]
+mysql.user = root
+mysql.password = secret
+mysql.adminDB = mysql
+mysql.testDB = scala_query_test
+mysql.create = CREATE DATABASE [DB]
+mysql.drop = DROP DATABASE IF EXISTS [DB]
+mysql.driver = com.mysql.jdbc.Driver
