Rename databases.properties to databases.properties.example and exclude the original file from git so I can keep a modified version locally.

--- a/test-dbs/databases.properties.example
+++ b/test-dbs/databases.properties.example
@@ -1,4 +1,9 @@
+##############################################################################
 # Configurations for external test databases
+##############################################################################
+# Copy this file to databases.properties and follow the instructions below to
+# enable the external database systems for unit tests.
+##############################################################################
 
 # PostgreSQL quick setup:
 # - Install PostgreSQL server with default options
