--- a/project/build.properties
+++ b/project/build.properties
@@ -1,9 +1,9 @@
 #
 #Sat Jul 03 16:21:48 CEST 2010
-project.organization=com.novocode
-project.name=scala-query
+project.organization=org.scalaquery
+project.name=scalaquery
 sbt.version=0.7.4
-project.version=1.0.0-SNAPSHOT
+project.version=0.9.0
 def.scala.version=2.7.7
 build.scala.versions=2.8.0
 project.initialize=false
