- Update .gitignore to ignore IDEA project files - Update version tp 0.9.1-SNAPSHOP - Update Scala version to 2.8.1

--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=org.scalaquery
 project.name=scalaquery
 sbt.version=0.7.4
-project.version=0.9.0
+project.version=0.9.1-SNAPSHOT
 def.scala.version=2.7.7
-build.scala.versions=2.8.0
+build.scala.versions=2.8.1
 project.initialize=false
