--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=org.scalaquery
 project.name=scalaquery
 sbt.version=0.7.4
-project.version=0.9.3-SNAPSHOT
+project.version=0.9.3
 def.scala.version=2.7.7
-build.scala.versions=2.8.1 2.8.0 2.9.0.RC1
+build.scala.versions=2.8.1 2.8.0 2.9.0.RC1 2.9.0.RC2
 project.initialize=false
