--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Sat Jul 03 16:21:48 CEST 2010
 project.organization=org.scalaquery
 project.name=scalaquery
-sbt.version=0.7.4
-project.version=0.9.3
+sbt.version=0.7.7
+project.version=0.9.4
 def.scala.version=2.7.7
-build.scala.versions=2.8.1 2.8.0 2.9.0.RC1 2.9.0.RC2
+build.scala.versions=2.9.0 2.8.1 2.8.0
 project.initialize=false
