--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=org.scalaquery
 project.name=scalaquery
 sbt.version=0.7.7
-project.version=0.9.4
+project.version=0.9.5-SNAPSHOT
 def.scala.version=2.7.7
 build.scala.versions=2.9.0 2.8.1 2.8.0
 project.initialize=false
