--- a/project/build.properties
+++ b/project/build.properties
@@ -5,5 +5,5 @@ project.name=scalaquery
 sbt.version=0.7.7
 project.version=0.9.5-SNAPSHOT
 def.scala.version=2.7.7
-build.scala.versions=2.9.0 2.8.1 2.8.0
+build.scala.versions=2.9.0-1 2.8.1 2.8.0
 project.initialize=false
