--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ bin/
 .manager/
 *.class
 lib_managed
-project/boot
-project/build/target
+/project/boot
+/project/build/target
 target
 .scala_dependencies
 test-dbs/*-*
@@ -14,8 +14,9 @@ test-dbs/databases.properties
 .classpath
 .project
 .settings/
-src/main/scala/org/scalaquery/ql/Parameters.scala
-src/main/scala/org/scalaquery/ql/Projection.scala
-src/main/scala/org/scalaquery/ql/Unpack.scala
-src/main/scala/org/scalaquery/simple/GetResult.scala
-src/main/scala/org/scalaquery/util/WithOp.scala
+/src/main/scala/org/scalaquery/ql/Parameters.scala
+/src/main/scala/org/scalaquery/ql/Projection.scala
+/src/main/scala/org/scalaquery/ql/Unpack.scala
+/src/main/scala/org/scalaquery/simple/GetResult.scala
+/src/main/scala/org/scalaquery/simple/SetParameter.scala
+/src/main/scala/org/scalaquery/util/WithOp.scala
