--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 target/
 /test-dbs/*-*
 /test-dbs/databases.properties
+!/test-dbs/type-provider/
 *.log
 *.iml
 *.pyc
 /\.target/
 /\.cache
-/\.project
-/\.classpath
-/\.settings/
+\.project
+\.classpath
+\.settings/
+.DS_Store
+*.swp
