--- a/test-dbs/type-provider/conf/type-providers-sqlite.conf
+++ b/test-dbs/type-provider/conf/type-providers-sqlite.conf
@@ -1,3 +1,3 @@
 jdbc-driver = org.sqlite.JDBC
-url = "jdbc:sqlite:test-dbs/type-provider/coffees/"
+url = "jdbc:sqlite:test-dbs/type-provider/dbs/sqlite/sqlite-supp.db"
 slick-object = scala.slick.driver.SQLiteDriver
