Add scaladoc link checker and fix the currently broken links

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ notifications:
 services:
   - mysql
   - postgresql
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y python-sphinx
