To show problem

--- a/test-dbs/databases.travis.properties
+++ b/test-dbs/databases.travis.properties
@@ -3,7 +3,7 @@
 postgres.enabled = true
 postgres.url = jdbc:postgresql:[DB]
 postgres.user = postgres
-postgres.password =
+postgres.password = Admin111
 postgres.adminDB = postgres
 postgres.testDB = slick-test
 postgres.create = CREATE DATABASE "[DB]" TEMPLATE = template0
@@ -13,8 +13,8 @@ postgres.driver = org.postgresql.Driver
 
 mysql.enabled = true
 mysql.url = jdbc:mysql://127.0.0.1/[DB]
-mysql.user = travis
-mysql.password =
+mysql.user = root
+mysql.password = Admin111
 mysql.adminDB = mysql
 mysql.testDB = scala_query_test
 mysql.create = CREATE DATABASE [DB]
