More flexibility for TestKit
- Move DBTest and the standard TestDBs into TestKit to allow other
  projects to be easily tested against the standard databases.

- Move the list of TestkitTests to run into testkit-reference.conf

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -10,6 +10,40 @@ testkit {
   # Store database files in this path (ignored by MySQL and in-memory databases)
   # absTestDir is computed from this and injected here for use in substitutions
   testDir = test-dbs
+
+  # All TestkitTest classes to run
+  testPackage = com.typesafe.slick.testkit.tests
+  testClasses = [
+    ${testPackage}.AggregateTest
+    ${testPackage}.ColumnDefaultTest
+    ${testPackage}.CountTest
+    ${testPackage}.RelationalTypeTest
+    ${testPackage}.JdbcTypeTest
+    ${testPackage}.ExecutorTest
+    ${testPackage}.ForeignKeyTest
+    ${testPackage}.InsertTest
+    ${testPackage}.InvokerTest
+    ${testPackage}.IterateeTest
+    ${testPackage}.JoinTest
+    ${testPackage}.MainTest
+    ${testPackage}.JdbcMapperTest
+    ${testPackage}.MetaModelTest
+    ${testPackage}.RelationalMapperTest
+    ${testPackage}.RelationalMiscTest
+    ${testPackage}.JdbcMiscTest
+    ${testPackage}.MutateTest
+    ${testPackage}.NestingTest
+    ${testPackage}.NewQuerySemanticsTest
+    ${testPackage}.PagingTest
+    ${testPackage}.PlainSQLTest
+    ${testPackage}.PrimaryKeyTest
+    ${testPackage}.RelationalScalarFunctionTest
+    ${testPackage}.JdbcScalarFunctionTest
+    ${testPackage}.SequenceTest
+    ${testPackage}.TemplateTest
+    ${testPackage}.TransactionTest
+    ${testPackage}.UnionTest
+  ]
 }
 
 ###################################################################################################
