--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ target/
 slick-testkit/src/codegen/resources/dbs/hsql/supp.properties
 lib
 *.autosave
+slick-testkit/src/test/scala/scala/slick/StringTest.scala
