--- a/reference.conf
+++ b/reference.conf
@@ -1,8 +1,9 @@
 typedsql {
 
 default {
-	url = "jdbc:h2:mem:test1;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/create.sql'\\;runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/populate.sql'"
-	driver = "org.h2.Driver"
+  url = "jdbc:h2:mem:test1;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/create.sql'\\;runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/populate.sql'"
+  driver = "org.h2.Driver"
+  slickDriver = "scala.slick.driver.H2Driver"
 }
 
 }
