--- a/reference.conf
+++ b/reference.conf
@@ -2,7 +2,7 @@ typedsql {
 
 default {
   url = "jdbc:h2:mem:test1;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/create.sql'\\;runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/populate.sql'"
-  driver = "org.h2.Driver"
+  jdbcDriver = "org.h2.Driver"
   slickDriver = "scala.slick.driver.H2Driver"
 }
 
