Move JDBC Meta data API tests into TestKit.
We also simplify the configuration for these tests with extra
capabilities and clean up PlainSQLTest.

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -27,6 +27,7 @@ testkit {
     ${testPackage}.JoinTest
     ${testPackage}.MainTest
     ${testPackage}.JdbcMapperTest
+    ${testPackage}.JdbcMetaTest
     ${testPackage}.MetaModelTest
     ${testPackage}.RelationalMapperTest
     ${testPackage}.RelationalMiscTest
