Fix MatchError during default value parsing, ignoring more time default functions

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -28,7 +28,7 @@ testkit {
     ${testPackage}.MainTest
     ${testPackage}.JdbcMapperTest
     ${testPackage}.JdbcMetaTest
-    ${testPackage}.MetaModelTest
+    ${testPackage}.ModelBuilderTest
     ${testPackage}.RelationalMapperTest
     ${testPackage}.RelationalMiscTest
     ${testPackage}.JdbcMiscTest
