--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,6 +3,9 @@ slick {
   # Use ANSI color sequences in tree dumps
   ansiDump = false
 
+  # Use Unicode box characters in tree and table dumps
+  unicodeDump = false
+
   # Dump individual Select and Ref nodes instead of a single Path
   dumpPaths = false
 }
