--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -8,4 +8,7 @@ slick {
 
   # Dump individual Select and Ref nodes instead of a single Path
   dumpPaths = false
+
+  # Determine whether use SQL Indentation.
+  sqlIndent = false
 }
