Use HikariCP by default (instead of no connection pooling):
- Disable pooling in TestKit reference config

- Rename `pool` parameter to `connectionPool` (to avoid confusion with
  the thread pool)

- Remove deprecation warnings for `autocommit` and `defaultCatalog`
  parameters. With HikariCP being the default now, there is no way to
  be compatible with an old configuration.

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -66,6 +66,7 @@ defaults {
     user = ${user}
     password = ${password}
     driver = ${driver}
+    connectionPool = disabled
   }
   # Admin database settings for Database.forConfig
   adminConn = {
@@ -73,6 +74,7 @@ defaults {
     user = ${user}
     password = ${password}
     driver = ${driver}
+    connectionPool = disabled
   }
 }
 
