Documentation plus minor improvements and fixes:
- “Introduction” and “Getting Started” adapted to the new API

- New section in the upgrade guide for 2.1 -> 2.2

- Replaced old “Connections / Transactions” chapter with new chapter
  “Databases & Actions”

- Preliminary Plain SQL support for the new API. The SQL interpolators
  for this are made available when importing `api` from a driver

- New Action combinator `Action.fold`

- Optionally create an extra keep-alive connection when using
  a DriverJdbcDataSource, for use in test environments with in-memory
  databases

- Bug fix: Don’t pass null to HikariConfig.setDriverClassName

- Bug fix: Make SuccessAction and FailureAction 
  SynchronousDatabaseActions so that Actions.seq can be fused.

- Add `DatabasePublisher.foreach`

- Add “insert...returning...into” back into the new API

- Remove Effect.BackendType which causes unnecessarily verbose code for
  little benefit (it can only protect against using the wrong type of
  backend, not the much more common case of using a wrong backend of the
  same type)

- Add `Unsafe` methods for efficient synchronous execution

- Add `SimpleAction` for easy JDBC interop

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -41,6 +41,7 @@ testkit {
     ${testPackage}.NewQuerySemanticsTest
     ${testPackage}.PagingTest
     ${testPackage}.PlainSQLTest
+    ${testPackage}.OldPlainSQLTest
     ${testPackage}.PrimaryKeyTest
     ${testPackage}.RelationalScalarFunctionTest
     ${testPackage}.JdbcScalarFunctionTest
