Simplify SQLBuilder and formatting/indenting:
- SQLBuilder still had a lot of old features that were not used anymore.

- Add support for the new indentation feature to the `b` interpolation
  macro to simplify the statement builder implementations.

- Improve formatting and highlighting of multi-line statements in
  statement logs and tree dumps.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,6 +9,6 @@ slick {
   # Dump individual Select and Ref nodes instead of a single Path
   dumpPaths = false
 
-  # Determine whether use SQL Indentation.
+  # Use multi-line, indented formatting for SQL statements
   sqlIndent = false
 }
