Proper support for string lengths:
- Allow specifying the basic type in O.DBType plus a separate length
  in O.Length.

- Make TEXT the default String type on MySQL. This may break some code
  which used String columns without any further DBType or Length option
  because TEXT cannot have a default value or be (easily, in the
  Slick-supported way) indexed.

- Make the default String type for MySQL configurable through
  application.conf (or by subclassing the driver and providing a custom
  configuration).

- Recognize unconstrained TEXT (on MySQL) and VARCHAR (on PostgreSQL)
  types in the model builder and omit O.Length in these cases.

- Remove the type bound on O.Length because it has to be usable for
  String, Option[String] and any mapped type based on these two.

Some test cases changed to specify O.Length(254) explicitly where needed
for MySQL. JdbcMiscTest.testColumnOptions removed (no longer
applicable).

Fixes #975.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,3 +12,8 @@ slick {
   # Use multi-line, indented formatting for SQL statements
   sqlIndent = false
 }
+
+slick.driver.MySQL {
+  # The default SQL type for strings without an explicit size limit
+  defaultStringType = "TEXT"
+}
