--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -3,3 +3,13 @@ slick {
   unicodeDump = true
   sqlIndent = true
 }
+
+tsql {
+  driver = "scala.slick.driver.H2Driver$"
+  db {
+    connectionPool = disabled
+    driver = "org.h2.Driver"
+    url = "jdbc:h2:mem:tsqltest;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/tsql-test.sql'"
+    keepAliveConnection = true
+  }
+}
