--- a/reference.conf
+++ b/reference.conf
@@ -1,7 +1,7 @@
 typedsql {
 
 default {
-  url = "jdbc:h2:mem:test1;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/create.sql'\\;runscript from 'slick-testkit/src/codegen/resources/dbs/h2mem/populate.sql'"
+  url = "jdbc:h2:mem:test1;INIT=runscript from 'slick-testkit/src/codegen/resources/dbs/tsql-test.sql'"
   jdbcDriver = "org.h2.Driver"
   slickDriver = "scala.slick.driver.H2Driver"
 }
