Improve documentation after internal review

--- a/slick/src/sphinx/resources/application.conf
+++ b/slick/src/sphinx/resources/application.conf
@@ -9,7 +9,7 @@ h2mem1 = {
 
 //#mydb
 mydb = {
-  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
     databaseName = "mydb"
     user = "myuser"
@@ -18,3 +18,14 @@ mydb = {
   numThreads = 10
 }
 //#mydb
+
+//#tsql
+tsql {
+  driver = "slick.driver.H2Driver$"
+  db {
+    connectionPool = disabled
+    driver = "org.h2.Driver"
+    url = "jdbc:h2:mem:tsql1;INIT=runscript from 'src/main/resources/create-schema.sql'"
+  }
+}
+//#tsql
