--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -13,3 +13,45 @@ tsql {
     keepAliveConnection = true
   }
 }
+
+proxyds1 = {
+  driver = "slick.driver.H2Driver$"
+  db = {
+    dataSourceClass = slick.test.jdbc.NoBindingProxyDataSource
+    properties = {
+      serviceName = mydb
+      driver = org.h2.Driver
+      url = "jdbc:h2:mem:test-proxy1"
+    }
+  }
+}
+
+proxyds2 = {
+  driver = "slick.driver.H2Driver$"
+  db = {
+    dataSourceClass = slick.test.jdbc.InitialDelayProxyDataSource
+    properties = {
+      serviceName = mydb
+      driver = org.h2.Driver
+      host = foo
+      port = 8888
+      delay = 500
+      url = "jdbc:h2:mem:test-proxy2_{host}_{port}"
+    }
+  }
+}
+
+proxyds2b = {
+  driver = "slick.driver.H2Driver$"
+  db = {
+    dataSourceClass = slick.test.jdbc.InitialDelayProxyDataSource
+    properties = {
+      serviceName = mydb
+      driver = org.h2.Driver
+      host = foo
+      port = 8888
+      delay = 5000
+      url = "jdbc:h2:mem:test-proxy2b_{host}_{port}"
+    }
+  }
+}
