Fix type bugs and enforce correct types in the query compiler:
- `Select` was still a special case for type-checking, keeping its
  node type when rebuilding. It now loses the type as it should, which
  is important when re-typing a tree after performing a change somewhere
  inside it. Only a single change in `assignUniqueSymbols` (where we
  have to preserve all field types because the table types are not yet
  known) is required to support this change.

- Add `NodeOps.replaceFold` for performing stateful bottom-up
  transformations of ASTs. It is used by `NodeOps.replaceInvalidate` for
  a transformation that collects TypeSymbols to invalidate and unassigns
  types from references containing these symbols.

- Remove the recently added `retype` flag from `NodeOps.replace`. Now
  that all nodes will drop their type when rebuilding a subtree, it is
  not needed anymore. We can `infer()` the type after transforming.

- Fix lots of small typing bugs in many compiler phases.

- Add a new `WellTyped` parameter to the `CompilerState` to indicate
  which part of the AST is supposed to be well-typed after running a
  phase.

- Add a new optional phase `verifyTypes` to check well-typedness of the
  AST. It can be run automatically after every regular phase by setting
  `slick.verifyTypes = true` in the application config.

- Hardcode config defaults in `GlobalConfig` for cases where
  `reference.conf` cannot be resolved (e.g. in macros).

--- a/slick/src/main/resources/reference.conf
+++ b/slick/src/main/resources/reference.conf
@@ -11,6 +11,9 @@ slick {
 
   # Use multi-line, indented formatting for SQL statements
   sqlIndent = false
+
+  # Verify types after each query compiler phase
+  verifyTypes = false
 }
 
 slick.driver.MySQL {
