Support Typesafe Config-based configuration of DataSource beans
- DataSourceJdbcDataSource is now a JdbcDataSourceFactory. DataSource
  classes are instantiated and configured as Java Beans (similar to
  the way HikariCP uses them). DataSourceJdbcDataSource is now used
  instead of DriverJdbcDataSource for “connectionPool = disabled”.

- Wrap Driver/DriverManager-based connections in DriverDataSource. This
  is used as the default (for full compatibility with the old config
  syntax) when using DataSourceJdbcDataSource without specifying the
  `dataSourceClass`.

- Support nested Properties values in ConfigExtensionMethods for proper
  configuration of nested DataSources.

- Deprecate DriverBasedJdbcDataSource and DriverJdbcDataSource.

Tests in DataSourceTest.

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -14,3 +14,32 @@ tsql {
     keepAliveConnection = true
   }
 }
+
+// Explicit DriverDataSource using nested properties
+ds1 {
+  driver = "slick.driver.H2Driver$"
+  db {
+    connectionPool = disabled
+    dataSourceClass = "slick.jdbc.DriverDataSource"
+    properties = {
+      driver = "org.h2.Driver"
+      url = "jdbc:h2:mem:test_ds1"
+      properties = {
+        LOCK_MODE = 1
+      }
+    }
+  }
+}
+
+// Implicitly created DriverDataSource for compatibility with 3.0 syntax
+ds2 {
+  driver = "slick.driver.H2Driver$"
+  db {
+    connectionPool = disabled
+    driver = "org.h2.Driver"
+    url = "jdbc:h2:mem:test_ds2"
+    properties = {
+      LOCK_MODE = 2
+    }
+  }
+}
