Remove deprecated APIs
- Remove the deprecated parts of the old Invoker and Executor APIs

- Simplify the remaining internal implementation

- Remove tests that only tested the old APIs

- Rewrite tests for other features to use the DBIO API

- Remove JdbcInsertInvokerComponent and integrate the insert code
  directly into JdbcActionComponent, thus avoiding SQL compilation on
  the database thread and allowing SQL statements to be overridden.

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -55,3 +55,23 @@ databaseUrl {
     }
   }
 }
+
+distrib1 {
+  driver = "slick.driver.H2Driver$"
+  db {
+    connectionPool = disabled
+    driver = "org.h2.Driver"
+    url = "jdbc:h2:mem:distrib1"
+    keepAliveConnection = true
+  }
+}
+
+distrib2 {
+  driver = "slick.driver.HsqldbDriver$"
+  db {
+    connectionPool = disabled
+    driver = "org.hsqldb.jdbcDriver"
+    url = "jdbc:hsqldb:mem:distrib2;user=SA;password=;shutdown=true"
+    keepAliveConnection = true
+  }
+}
