Add a test for DatabaseUrlDataSource

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -43,3 +43,15 @@ ds2 {
     }
   }
 }
+
+// HikariCP with DATABASE_URL parsing
+databaseUrl {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "postgres://user:pass@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
