Add a test for DatabaseUrlDataSource Conflicts: 	common-test-resources/application.conf 	slick-testkit/src/test/scala/slick/test/jdbc/DataSourceTest.scala

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -13,3 +13,15 @@ tsql {
     keepAliveConnection = true
   }
 }
+
+// HikariCP with DATABASE_URL parsing
+databaseUrl {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "postgres://user:pass@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
