Added documentation for DatabaseUrlDataSource

--- a/slick/src/sphinx/resources/application.conf
+++ b/slick/src/sphinx/resources/application.conf
@@ -29,3 +29,13 @@ tsql {
   }
 }
 //#tsql
+
+//#dburl
+databaseUrl {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.driver.PostgresDriver$"
+    url = "postgres://user:pass@host/dbname"
+  }
+}
+//#dburl
