--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -4,7 +4,7 @@
 
 testkit {
   # Use only the following DBs (or use all if not set)
-  #testDBs = [h2mem, h2disk, hsqldbmem, hsqldbdisk, sqlitemem, sqlitedisk, derbymem, derbydisk, postgres, mysql, access, heap]
+  #testDBs = [h2mem, h2rownum, h2disk, hsqldbmem, hsqldbdisk, sqlitemem, sqlitedisk, derbymem, derbydisk, postgres, mysql, access, heap]
   testDBs = null
 
   # Store database files in this path (ignored by MySQL and in-memory databases)
