Add `detectRebuild` option to mark rebuilt leaf nodes after each phase:
This can be used to track down cases where the AST is rebuilt despite
not containing any changes (i.e. it is `==` but not `eq` after a phase).

--- a/slick/src/main/resources/reference.conf
+++ b/slick/src/main/resources/reference.conf
@@ -14,6 +14,9 @@ slick {
 
   # Verify types after each query compiler phase
   verifyTypes = false
+
+  # Detect unnecessary rebuilding of the AST after every query compiler phase
+  detectRebuild = false
 }
 
 slick.driver.MySQL {
