Add Slick Extensions drivers
These are the drivers for DB2, Oracle and SQL Server from Slick
Extensions 3.1.0, integrated into the main project and updated to
work on master for 3.2.

See http://slick.typesafe.com/news/2016/02/01/slick-extensions-licensing-change.html for details.

--- a/slick/src/main/resources/reference.conf
+++ b/slick/src/main/resources/reference.conf
@@ -37,3 +37,10 @@ slick.jdbc.MySQLProfile {
   # to "VARCHAR(254)"
   defaultStringType = null
 }
+
+# Profile-specific settings for SQLServerProfile
+slick.jdbc.SQLServerProfile {
+  # The default SQL type for strings without an explicit size limit.
+  # When set to null / undefined, pick "TEXT" where possible, otherwise fall back to "VARCHAR(254)"
+  defaultStringType = null
+}
