--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: false
 language: scala
-script: sbt -jvm-opts jvmopts.travis -Dslick.testkit-config=test-dbs/testkit.travis.conf +testAll coveralls
+script: 
+- sbt -jvm-opts jvmopts.travis -Dslick.testkit-config=test-dbs/testkit.travis.conf +testAll coveralls
+- sbt clean coverage test
+after_success:
+- sbt coverageReport
+- sbt coverageAggregate
+- sbt coveralls
 jdk:
   - oraclejdk8
 notifications:
