--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -76,3 +76,11 @@ distrib2 {
     keepAliveConnection = true
   }
 }
+
+h2mem1 = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = "HikariCP"
+  numThreads = 1
+  keepAliveConnection = true
+}
