added: test for forceInsertQuery fixes

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -46,6 +46,7 @@ testkit {
     ${testPackage}.TransactionTest
     ${testPackage}.UnionTest
     ${testPackage}.ForUpdateTest
+    ${testPackage}.ForceInsertQueryTest
   ]
 }
 
