Expose AsyncExecutor workload to monitoring via JMX
- Parse `registerMbeans` and `poolName` options in `JdbcBackend` and
  document that they apply to all pool implementations, not just
  HikariCP. The AsyncExecutor is now created with the configured
  `poolName` (instead of the config path) as its name.

- Register an implementation of the new `AsyncExecutorMXBean` interface
  as an MBean when creating an `AsyncExecutor` with `registerMbeans=true`.
  It is unregistered on `close()`. Any errors during registration or
  unregistration are logged as errors and ignored.

Fixes #1532. Test in MBeansTest.testMBeans.

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -84,3 +84,14 @@ h2mem1 = {
   numThreads = 1
   keepAliveConnection = true
 }
+
+// MBeans-enabled configuration, used by MBeansTest
+mbeans = {
+  url = "jdbc:h2:mem:test_mbeans"
+  driver = org.h2.Driver
+  connectionPool = "HikariCP"
+  numThreads = 1
+  keepAliveConnection = true
+  registerMbeans = true
+  poolName = "myMbeansDatabase"
+}
