--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
       }
   - cmd: SET JDK_HOME=C:\Program Files\Java\jdk1.8.0
   - cmd: SET JAVA_HOME=C:\Program Files\Java\jdk1.8.0
-  - cmd: SET PATH=C:\sbt\sbt\bin;%JDK_HOME%\bin;%PATH%
+  - cmd: SET PATH=C:\sbt\sbt-launcher-packaging-0.13.13\bin;%JDK_HOME%\bin;%PATH%
   - cmd: SET SBT_OPTS=-Xmx4g -Xss2m -Dslick.testkit-config=test-dbs/testkit-appveyor.conf
 # Start up sqlservers: 2008 on port 1433, 2012 on 1533, 2014 on 1633. Enable tcp connections
   - ps: |
@@ -56,5 +56,5 @@ build_script:
 test_script:
   - sbt testkit/test:test
 cache:
-  - C:\sbt\
+  - C:\sbt\ -> appveyor.yml
   - C:\Users\appveyor\.ivy2
