chore: add altDatabaseUrl to allow testing of the alternative scheme

--- a/doc/code/application.conf
+++ b/doc/code/application.conf
@@ -39,3 +39,13 @@ databaseUrl {
   }
 }
 //#dburl
+
+//#altdburl
+altDatabaseUrl {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "org.postgresql.Driver"
+    url = "postgresql://user:pass@host/dbname"
+  }
+}
+//#altdburl
