--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -57,6 +57,18 @@ databaseUrl {
   }
 }
 
+// Test alternative dsn for postgres
+altDatabaseUrl {
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "slick.test.jdbc.MockDriver"
+    url = "postgresql://user:pass@host/dbname"
+    properties = {
+      foo = bar
+    }
+  }
+}
+
 distrib1 {
   profile = "slick.jdbc.H2Profile$"
   db {
