Tag-based publishing to Sonatype

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ lib
 src/sphinx/capabilities.csv
 slick/src/sphinx/capabilities.csv
 doc/capabilities.md
+/sonatype.sbt
+/admin/secring.asc
+/secrets.tar
+/publish-settings.sbt
