--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
 - docker version
 - sh -v travis/runcontainer.sh oracle db2
 - docker ps
+- openssl aes-256-cbc -K $encrypted_c3c0a1170361_key -iv $encrypted_c3c0a1170361_iv
+  -in secrets.tar.enc -out secrets.tar -d
 jdk:
   - oraclejdk8
 notifications:
@@ -22,12 +24,11 @@ addons:
   apt:
     packages:
     - graphviz
-    - python-sphinx
     - mysql-server-5.6
     - mysql-client-core-5.6
     - mysql-client-5.6
 script:
-- sbt -jvm-opts jvmopts.travis -Dslick.testkit-config=test-dbs/testkit.travis.conf clean +testAll
+- admin/build.sh
 cache:
   directories:
     - $HOME/.sbt
