fixes race-condition using unpinned/flatMapped DBIOActions, leading to missing decreaseInUseCount calls and possible stall of ManagedBlockingArrayQueue

--- a/common-test-resources/application.conf
+++ b/common-test-resources/application.conf
@@ -85,6 +85,17 @@ h2mem1 = {
   keepAliveConnection = true
 }
 
+h2mem-inuse = {
+  url = "jdbc:h2:mem:test1"
+  driver = org.h2.Driver
+  connectionPool = "HikariCP"
+  numThreads = 5
+  maxConnections = 5
+  keepAliveConnection = true
+  registerMbeans = true
+  poolName = "inUseCount"
+}
+
 // MBeans-enabled configuration, used by MBeansTest
 mbeans = {
   url = "jdbc:h2:mem:test_mbeans"
