Add test cases for limit and orderby with union

--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -114,6 +114,9 @@ mysql {
   create = CREATE DATABASE ${testDB}
   drop = DROP DATABASE IF EXISTS ${testDB}
   driver = com.mysql.jdbc.Driver
+  testClasses = ${testkit.testClasses} [
+    ${testkit.testPackage}.MySQLExtraTests
+  ]
 }
 
 oracle {
